index file refector for setu p v4

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 @import "tailwindcss";
+
 
 @theme {
     --color-accent: #00ff99;
@@ -7,9 +9,7 @@
     --font-primary: "JetBrains Mono", serif;
 }
 
-@layer base {
-    body {
-        @apply font-primary dark:bg-primary bg-white text-white leading-loose;
+body {
+    @apply font-primary bg-primary text-white leading-loose;
 
-    }
 }
