--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,32 @@ body {
     @apply font-primary bg-primary text-white leading-loose;
 
 }
+
+.text-outline {
+    -webkit-text-stroke: 1px #ffffff;
+}
+
+
+
+.text-outline-hover {
+    -webkit-text-stroke: 1px #00ff99;
+}
+
+.card::after {
+    content: "";
+    position: absolute;
+    top: 150%;
+    left: -275px;
+    width: 120%;
+    transform: rotate(50deg);
+    background-color: #5dba79;
+    height: 18px;
+    filter: blur(30px);
+    opacity: .5;
+    transition: 1s ease;
+}
+
+.card:hover::after {
+    width: 240%;
+    top: -100%;
+}
